tests/functional/fail/use_of_const_global.stderr
error[E0425]: cannot find value `GLOBAL` in this scope
 --> tests/functional/fail/use_of_const_global.rs:6:10
  |
6 |     i1 + GLOBAL
  |          ^^^^^^ not found in this scope
  |
  = help: consider importing this constant:
          crate::GLOBAL
